// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Combobox Raça deve conter somente as raças Pardo e Negro quando somenteRacasVitima é true  1`] = `
<comboRaca
  classes="racas"
  id="raca-vitma"
  onChange={[Function]}
  somenteRacasVitima={true}
>
  <combobox
    divClasse="input-field col s6"
    id="raca-vitma"
    itens={
      Array [
        "Preta",
        "Parda",
      ]
    }
    label="Selecione sua raça / cor"
    onChange={[Function]}
    valorPadrao="Selecione sua raça / cor"
  >
    <div
      className="input-field col s6"
    >
      <select
        id="raca-vitma"
        onChange={[Function]}
      >
        <option
          value=""
        >
          Selecione sua raça / cor
        </option>
        <option
          key="Preta"
          value="Preta"
        >
           
          Preta
           
        </option>
        <option
          key="Parda"
          value="Parda"
        >
           
          Parda
           
        </option>
      </select>
      <label
        htmlFor="raca-vitma"
      >
        Selecione sua raça / cor
      </label>
    </div>
  </combobox>
</comboRaca>
`;

exports[`Combobox Raça deve conter todas as raças quando somenteRacasVitima é false  1`] = `
<comboRaca
  classes="racas"
  id="raca-testemunha"
  onChange={[Function]}
  somenteRacasVitima={false}
>
  <combobox
    divClasse="input-field col s6"
    id="raca-testemunha"
    itens={
      Array [
        "Amarela",
        "Branco",
        "Índigena",
        "Parda",
        "Preta",
      ]
    }
    label="Selecione sua raça / cor"
    onChange={[Function]}
    valorPadrao="Selecione sua raça / cor"
  >
    <div
      className="input-field col s6"
    >
      <select
        id="raca-testemunha"
        onChange={[Function]}
      >
        <option
          value=""
        >
          Selecione sua raça / cor
        </option>
        <option
          key="Amarela"
          value="Amarela"
        >
           
          Amarela
           
        </option>
        <option
          key="Branco"
          value="Branco"
        >
           
          Branco
           
        </option>
        <option
          key="Índigena"
          value="Índigena"
        >
           
          Índigena
           
        </option>
        <option
          key="Parda"
          value="Parda"
        >
           
          Parda
           
        </option>
        <option
          key="Preta"
          value="Preta"
        >
           
          Preta
           
        </option>
      </select>
      <label
        htmlFor="raca-testemunha"
      >
        Selecione sua raça / cor
      </label>
    </div>
  </combobox>
</comboRaca>
`;
